--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.23.2",
+    "@gradio/client": "2.0.0-dev.1",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.11.0",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -38,19 +39,24 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "prisma": "^6.11.0",
     "react": "^19.0.0",
+    "react-before-after-slider-component": "^1.1.8",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.59.0",
     "react-resizable-panels": "^3.0.3",
     "recharts": "^3.0.2",
