fix(deploy): omit build cache paths from Netlify secrets scanning and add .netlify to gitignore

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,8 @@
   NPM_FLAGS = "--legacy-peer-deps"
   # Omit Clerk's public publishable key from secrets scanning (it's meant to be public)
   SECRETS_SCAN_OMIT_KEYS = "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY"
+  # Omit build cache and generated files from secrets scanning
+  SECRETS_SCAN_OMIT_PATHS = ".netlify/**,.next/**"
 
 [functions]
   node_bundler = "esbuild"
